--- a/fclient/app/build.gradle
+++ b/fclient/app/build.gradle
@@ -63,6 +63,7 @@ android {
 
 dependencies {
     implementation 'commons-codec:commons-codec:1.17.0'
+    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.constraintlayout
