--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-logger": "^1.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^4.3.8"
   }
 }
